@@ -13,16 +13,17 @@
     <gt.version>21-SNAPSHOT</gt.version>
     <jts.version>1.16.0-RC1</jts.version>
     <jaiext.version>1.1.2</jaiext.version>
-    <spring.version>4.2.5.RELEASE</spring.version>
+    <spring.version>5.1.1.RELEASE</spring.version>
     <xstream.version>1.4.10</xstream.version>
-    <spring.security.version>4.0.4.RELEASE</spring.security.version>
+    <spring.security.version>5.1.1.RELEASE</spring.security.version>
     <commons-logging.version>1.1.1</commons-logging.version>
     <commons-io.version>2.6</commons-io.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
-    <commons-lang.version>2.4</commons-lang.version>
+    <commons-lang.version>3.8.1</commons-lang.version>
     <commons-collections.version>3.2.2</commons-collections.version>
     <commons-codec.version>1.10</commons-codec.version>
-    <guava.version>25.1-jre</guava.version>
+    <commons-text.version>1.4</commons-text.version>
+    <guava.version>27.0-jre</guava.version>
     <jsr305.version>3.0.1</jsr305.version>
     <log4j.version>1.2.14</log4j.version>
     <h2.version>1.1.119</h2.version>
@@ -33,12 +34,12 @@
     <jalopy.srcExcludesPattern>disabled</jalopy.srcExcludesPattern>
     <test.maxHeapSize>64M</test.maxHeapSize>
     <maven.test.jvmargs/>
-    <imageio-ext.version>1.1.27</imageio-ext.version>
-    <hazelcast.version>2.3.1</hazelcast.version>
+    <imageio-ext.version>1.2.0</imageio-ext.version>
+    <hazelcast.version>3.11-BETA-1</hazelcast.version>
     <joda-time.version>2.8.1</joda-time.version>
     <fmt.action>format</fmt.action>
     <fmt.skip>false</fmt.skip>
-    <jackson.version>2.8.7</jackson.version>
+    <jackson.version>2.9.7</jackson.version>
   </properties>
   
   <repositories>
@@ -54,12 +55,6 @@
       <id>osgeo</id>
       <name>Open Source Geospatial Foundation Repository</name>
       <url>http://download.osgeo.org/webdav/geotools/</url>
-    </repository>
-    <repository>
-      <id>oracleReleases</id>
-      <name>Oracle Released Java Packages</name>
-      <url>http://download.oracle.com/maven</url>
-      <layout>default</layout>
     </repository>
   </repositories>
  
@@ -117,7 +112,6 @@
       <artifactId>jsr305</artifactId>
       <version>${jsr305.version}</version>
     </dependency>
-
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
@@ -140,9 +134,14 @@
       <version>${commons-io.version}</version>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>${commons-lang.version}</version>
+     <groupId>org.apache.commons</groupId>
+     <artifactId>commons-lang3</artifactId>
+     <version>${commons-lang.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>${commons-text.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
@@ -209,7 +208,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -269,6 +268,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
+      <exclusions>
+        <exclusion>  <!-- Use our own commons-logging  -->
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jcl</artifactId>
+        </exclusion>
+      </exclusions>
       <version>${spring.version}</version>
     </dependency>
     <dependency>
@@ -552,9 +557,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
         <configuration>
           <forkMode>pertest</forkMode>
-          <argLine>${maven.test.jvmargs}</argLine>
+          <argLine>${maven.test.jvmargs} -XX:+IgnoreUnrecognizedVMOptions --illegal-access=warn</argLine>
         </configuration>
       </plugin>
 
